Fixed the styling of the sticky footer so that it always hides behind the fixed footer

--- a/public/main.css
+++ b/public/main.css
@@ -40,6 +40,7 @@
     display: grid;
     grid-template-rows: repeat(6, 180px);
     grid-template-columns: repeat(12, 180px);
+    flex: 1 0 auto;
 }
 
 #videoTileGrid > .videoTile {
@@ -76,6 +77,15 @@
 
 /* Other room page styling */
 
+html, body, #roomPage {
+    height: 100%;
+}
+
+#roomPage {
+    /* display: flex; set in app.js */
+    flex-direction: column;
+}
+
 ::-webkit-scrollbar {
     height: 15px;
     width: 15px;
@@ -100,6 +110,7 @@
     width: 100%;
     height: 68px;
     background: #222;
+    flex: 0 0 auto;
 }
 
 #bottomBar {
